# sidecars-cookiecutter

./: .gitignore  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
